# astar_vfh_avoidance

./: .gitignore  CMakeLists.txt  package.xml
config/: VFF.yaml  VFH.yaml  astar.yaml
include/: VFF.h  VFH.h  astar.h  atsar.h  new_detect.obs.h  new_detect_obs.h  ring_crossing.h
launch/: VFF.launch  VFH.launch  astar.launch
scripts/: ring_detector.py
shell/: shell_for_vmware.sh
src/: VFF.cpp  VFH.cpp  astar.cpp  ring_crossing.cpp
